--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "core-js": "^3.6.4",
+        "element-ui": "^2.13.1",
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
@@ -19,33 +21,14 @@
         "@vue/cli-plugin-eslint": "^4.3.0",
         "@vue/cli-plugin-pwa": "^4.3.0",
         "@vue/cli-service": "^4.3.0",
-        "@vue/eslint-config-standard": "^5.1.2",
+        "@vue/eslint-config-prettier": "^6.0.0",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.2.2",
+        "node-sass": "^4.12.0",
+        "prettier": "^1.19.1",
+        "sass-loader": "^8.0.2",
         "vue-template-compiler": "^2.6.11"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "@vue/standard"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {}
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not dead"
-    ]
+    }
 }
